# rsutils

./: .bumpversion.cfg  README.md  azure-pipelines.yml  example.py  pyproject.toml
rsutils/: utils.py
rsutils/landsat/: __init__.py  metadata.py  parser.py
rsutils/s2/: __init__.py
tests/: __init__.py  conftest.py  test_rsutils.py  utils_test.py
tests/data/: LC08_L1TP_204052_20190504_20190520_01_T1_MTL.txt  LE07_L1TP_016025_20190421_20190421_01_RT_MTL.txt  LE71840332009140ASN00_MTL.txt  LT04_L1TP_183035_19910901_20170126_01_T1_MTL.txt  LT05_L1TP_038037_20120505_20160830_01_T1_MTL.txt  LT51800342011158MOR00_MTL.txt  manifest.safe  mtl.txt
tests/data/S2A_MSIL2A_20190220T001631_N0211_R116_T56LMM_20190220T024455.SAFE/: INSPIRE.xml  MTD_MSIL2A.xml  manifest.safe
tests/data/ls8/: LC08_L1TP_204052_20190504_20190520_01_T1_DS_ANG.txt  LC08_L1TP_204052_20190504_20190520_01_T1_DS_B1.TIF  LC08_L1TP_204052_20190504_20190520_01_T1_DS_B10.TIF  LC08_L1TP_204052_20190504_20190520_01_T1_DS_B11.TIF  LC08_L1TP_204052_20190504_20190520_01_T1_DS_B2.TIF  LC08_L1TP_204052_20190504_20190520_01_T1_DS_B3.TIF  LC08_L1TP_204052_20190504_20190520_01_T1_DS_B4.TIF  LC08_L1TP_204052_20190504_20190520_01_T1_DS_B5.TIF  LC08_L1TP_204052_20190504_20190520_01_T1_DS_B6.TIF  LC08_L1TP_204052_20190504_20190520_01_T1_DS_B7.TIF  LC08_L1TP_204052_20190504_20190520_01_T1_DS_B8.TIF  LC08_L1TP_204052_20190504_20190520_01_T1_DS_B9.TIF  LC08_L1TP_204052_20190504_20190520_01_T1_DS_BQA.TIF  LC08_L1TP_204052_20190504_20190520_01_T1_DS_MTL.txt
tests/landsat/: metadata_test.py  parser_test.py
(+119 files in other folders)
